--- a/abstract/abstract.Rmd
+++ b/abstract/abstract.Rmd
@@ -18,7 +18,7 @@ output:
 
 # 方法
 
-明期を16 h、気温を20C、相対湿度を60%としたグロースチャンバ内に光源からの距離の調節と寒冷紗の使用により、栽培ポット上端の位置における光合成有効光量子束密度が360 µmol m^-2^ s^-1^ および60 µmol m^-2^ s^-1^ となる強光および弱光が照射される区画を設けた。
+明期を16 h、気温を20&deg;C、相対湿度を60%としたグロースチャンバ内に光源からの距離の調節と寒冷紗の使用により、栽培ポット上端の位置における光合成有効光量子束密度が360 µmol m^-2^ s^-1^ および60 µmol m^-2^ s^-1^ となる強光および弱光が照射される区画を設けた。
 播種から18日目まで強光のもとで成育したエンドウ (‘Greenfeast’) を、実験期間を通して強光処理を行う試験区 (HL)、弱光処理を行う試験区 (LL)、2、4、あるいは8 日間 の弱光処理ののち再び強光処理を行う試験区 (R2、R4、R8) に供試した。
 最長で処理開始から18日間、供試植物の第三本葉を以下の測定に供試した。
 内部を1% CO2条件にした酸素電極チャンバを用いて測定した2000 µmol m^-2^ s^-1^ の白色 LED 光のもとでの総酸素発生速度を光合成能力 (P~max~) とみなした。
